--- a/Covariation-CategoricalAndContinuousVariable.Rmd
+++ b/Covariation-CategoricalAndContinuousVariable.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Load packages
 ```{r}
 #install.packages("tidyverse") 
-library(tidyverse) #load tidyverse package
+library(tidyverse) 
 ```
 
 ## Read in data file
@@ -23,11 +23,10 @@ head(WineReviewData)
 
 ## Find Top 10 Wine Varieties
 ```{r}
-WineReviewDataVar  <- WineReviewData %>% #create new df with the count of wine varieties
-  group_by(variety) %>% 
-  count() %>% #take the count of data
-  arrange(desc(n)) %>% #arrange count in descending order
-  head(10) #displays the first 15 rows
+WineReviewDataVar  <- WineReviewData %>% 
+  count() %>% 
+  arrange(desc(n)) %>% 
+  head(10) 
 
 WineReviewDataVar
 ```
